# spu-api

./: .gitignore  CMakeLists.txt  Readme.md  main.cpp
libspu/: abstract_fields.hpp  abstract_structure.hpp  base_structure.cpp  base_structure.h  base_structure.hpp  containers_operators.cpp  containers_operators.hpp  data_container_operators.cpp  data_container_operators.h  extern_value.cpp  extern_value.h  extern_value.hpp  fields.hpp  fields_containers.hpp  fields_pointer.hpp  fileops.hpp  libspu.cpp  libspu.h  libspu.hpp  simulator.cpp  simulator.hpp  spu.h  structure.hpp
libspu/errors/: could_not_create_structure.hpp  did_not_found_by_name.hpp  no_fields_data.hpp
simulator/: Simulator.cpp  Simulator.h  test.cpp
